# docs/swagger.yaml
@@ -2,159 +2,25 @@ definitions:
   gin.H:
     additionalProperties: {}
     type: object
-  gorm.DeletedAt:
-    properties:
-      time:
-        type: string
-      valid:
-        description: Valid is true if Time is not NULL
-        type: boolean
-    type: object
-  top-up-api_internal_model.CardDetail:
-    properties:
-      card_price:
-        $ref: '#/definitions/top-up-api_internal_model.CardPrice'
-      card_price_code:
-        type: string
-      cash_back:
-        $ref: '#/definitions/top-up-api_internal_model.CashBack'
-      cash_back_code:
-        type: string
-      createdAt:
-        type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
-      id:
-        type: integer
-      provider:
-        $ref: '#/definitions/top-up-api_internal_model.Provider'
-      provider_code:
-        type: string
-      updatedAt:
-        type: string
-    type: object
-  top-up-api_internal_model.CardPrice:
-    properties:
-      code:
-        type: string
-      createdAt:
-        type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
-      id:
-        type: integer
-      updatedAt:
-        type: string
-      value:
-        type: integer
-    type: object
-  top-up-api_internal_model.CashBack:
-    properties:
-      code:
-        type: string
-      createdAt:
-        type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
-      id:
-        type: integer
-      type:
-        $ref: '#/definitions/top-up-api_internal_model.CashBackType'
-      updatedAt:
-        type: string
-      value:
-        type: integer
-    type: object
-  top-up-api_internal_model.CashBackType:
-    enum:
-    - percentage
-    - fixed
-    type: string
-    x-enum-varnames:
-    - CashBackTypePercentage
-    - CashBackTypeFixed
-  top-up-api_internal_model.Provider:
-    properties:
-      code:
-        type: string
-      createdAt:
-        type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
-      id:
-        type: integer
-      logo_url:
-        type: string
-      name:
-        type: string
-      status:
-        type: string
-      updatedAt:
-        type: string
-    type: object
-  top-up-api_internal_model.PurchaseHistory:
-    properties:
-      card_detail:
-        $ref: '#/definitions/top-up-api_internal_model.CardDetail'
-      card_detail_id:
-        type: integer
-      createdAt:
-        type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
-      id:
-        type: integer
-      order_id:
-        type: integer
-      phone_number:
-        type: string
-      status:
-        $ref: '#/definitions/top-up-api_internal_model.PurchaseHistoryStatus'
-      total_price:
-        type: integer
-      updatedAt:
-        type: string
-      user:
-        $ref: '#/definitions/top-up-api_internal_model.User'
-      user_id:
-        type: integer
-    type: object
   top-up-api_internal_model.PurchaseHistoryStatus:
     enum:
     - pending
+    - confirm
     - success
     - failed
     type: string
     x-enum-varnames:
     - PurchaseHistoryStatusPending
+    - PurchaseHistoryStatusConfirm
     - PurchaseHistoryStatusSuccess
     - PurchaseHistoryStatusFailed
-  top-up-api_internal_model.User:
+  top-up-api_internal_schema.CardDetailMiniatureResponse:
     properties:
-      balance:
-        type: integer
-      cash_back:
-        type: integer
-      createdAt:
-        type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
-      first_name:
-        type: string
+      card_price:
+        $ref: '#/definitions/top-up-api_internal_schema.CardPriceResponse'
       id:
         type: integer
-      last_name:
-        type: string
-      password:
-        type: string
-      phone_number:
-        type: string
-      purchase_history:
-        items:
-          $ref: '#/definitions/top-up-api_internal_model.PurchaseHistory'
-        type: array
-      updatedAt:
-        type: string
+      provider: {}
     type: object
   top-up-api_internal_schema.CardDetailResponse:
     properties:
@@ -163,6 +29,17 @@ definitions:
       cash_back: {}
       id:
         type: integer
+      provider:
+        $ref: '#/definitions/top-up-api_internal_schema.ProviderInfo'
+    type: object
+  top-up-api_internal_schema.CardDetailsGroupByProvider:
+    properties:
+      card_details:
+        items:
+          $ref: '#/definitions/top-up-api_internal_schema.CardDetailMiniatureResponse'
+        type: array
+      provider:
+        $ref: '#/definitions/top-up-api_internal_schema.ProviderInfo'
     type: object
   top-up-api_internal_schema.CardPriceResponse:
     properties:
@@ -214,6 +91,43 @@ definitions:
       user_id:
         type: integer
     type: object
+  top-up-api_internal_schema.OrderUpdateRequest:
+    properties:
+      order_id:
+        type: integer
+      phone_number:
+        type: string
+      status:
+        $ref: '#/definitions/top-up-api_internal_model.PurchaseHistoryStatus'
+    type: object
+  top-up-api_internal_schema.Pagination:
+    properties:
+      current_page:
+        type: integer
+      total_count:
+        type: integer
+      total_page:
+        type: integer
+    type: object
+  top-up-api_internal_schema.PaginationResponse:
+    properties:
+      code:
+        type: integer
+      data: {}
+      error:
+        type: string
+      message:
+        type: string
+      pagination:
+        $ref: '#/definitions/top-up-api_internal_schema.Pagination'
+    type: object
+  top-up-api_internal_schema.ProviderInfo:
+    properties:
+      code:
+        type: string
+      name:
+        type: string
+    type: object
   top-up-api_internal_schema.ProviderResponse:
     properties:
       code:
@@ -223,6 +137,16 @@ definitions:
       name:
         type: string
       status:
+        type: string
+    type: object
+  top-up-api_internal_schema.Response:
+    properties:
+      code:
+        type: integer
+      data: {}
+      error:
+        type: string
+      message:
         type: string
     type: object
   top-up-api_internal_schema.UserCreateRequest:
@@ -288,6 +212,17 @@ definitions:
 info:
   contact: {}
 paths:
+  /card-detail:
+    get:
+      description: Get card details grouped by provider
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/top-up-api_internal_schema.CardDetailsGroupByProvider'
+      summary: Get card details grouped by provider
+      tags:
+      - card-detail
   /card-detail/{providerCode}:
     get:
       description: Get card details by provider code
@@ -351,6 +286,27 @@ paths:
       summary: Create order
       tags:
       - order
+  /order/update-status:
+    patch:
+      consumes:
+      - application/json
+      description: Update order status
+      parameters:
+      - description: Order update request
+        in: body
+        name: orderUpdateRequest
+        required: true
+        schema:
+          $ref: '#/definitions/top-up-api_internal_schema.OrderUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/top-up-api_internal_schema.Response'
+      tags:
+      - order
   /provider:
     get:
       consumes:
@@ -379,15 +335,21 @@ paths:
         name: id
         required: true
         type: integer
+      - description: Page number
+        in: path
+        name: page
+        type: integer
+      - description: Page size
+        in: path
+        name: pageSize
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/top-up-api_internal_model.PurchaseHistory'
-            type: array
+            $ref: '#/definitions/top-up-api_internal_schema.PaginationResponse'
       security:
       - Bearer: []
       summary: Get purchase history
