# internal/controller/http/order.go
@@ -3,6 +3,7 @@ package controller
 import (
 	"errors"
 	"net/http"
+	"top-up-api/internal/mapper"
 	"top-up-api/internal/schema"
 	"top-up-api/internal/service"
 	"top-up-api/pkg/logger"
@@ -22,6 +23,7 @@ func NewOrderRouter(handler *gin.RouterGroup, s service.OrderService, l logger.I
 	{
 		orderRoutes.POST("/create", h.CreateOrder)
 		orderRoutes.POST("/confirm", h.ConfirmOrder)
+		orderRoutes.PATCH("/update-status", h.UpdateOrderStatus)
 	}
 }
 
@@ -39,19 +41,17 @@ func (h *OrderRouter) CreateOrder(c *gin.Context) {
 	orderRequest := schema.OrderRequest{}
 	if err := c.ShouldBindJSON(&orderRequest); err != nil {
 		h.logger.Error(errors.New("failed to bind order request"), zap.Error(err))
-		c.JSON(http.StatusBadRequest, schema.ErrorResponse(http.StatusBadRequest, "Bad Request", err.Error()))
+		c.JSON(http.StatusBadRequest, mapper.ErrorResponse(http.StatusBadRequest, "Bad Request", err.Error()))
 		return
 	}
 	orderResponse, err := h.service.CreateOrder(c, orderRequest)
 	if err != nil {
 		h.logger.Error(errors.New("failed to create order"), zap.Error(err))
-		c.JSON(http.StatusInternalServerError, schema.ErrorResponse(http.StatusInternalServerError, "Internal Server Error", err.Error()))
+		c.JSON(http.StatusInternalServerError, mapper.ErrorResponse(http.StatusInternalServerError, "Internal Server Error", err.Error()))
 		return
 	}
-	c.JSON(http.StatusOK, schema.SuccessResponse(orderResponse))
+	c.JSON(http.StatusOK, mapper.SuccessResponse(orderResponse))
 }
-
-// BasePath /v1/api
 
 // @Summary Confirm order
 // @Description Confirm order
@@ -65,14 +65,38 @@ func (h *OrderRouter) ConfirmOrder(c *gin.Context) {
 	orderConfirmRequest := schema.OrderConfirmRequest{}
 	if err := c.ShouldBindJSON(&orderConfirmRequest); err != nil {
 		h.logger.Error(errors.New("failed to bind order confirm request"), zap.Error(err))
-		c.JSON(http.StatusBadRequest, schema.ErrorResponse(http.StatusBadRequest, "Bad Request", err.Error()))
+		c.JSON(http.StatusBadRequest, mapper.ErrorResponse(http.StatusBadRequest, "Bad Request", err.Error()))
 		return
 	}
 	err := h.service.ConfirmOrder(c, orderConfirmRequest)
 	if err != nil {
 		h.logger.Error(errors.New("failed to confirm order"), zap.Error(err))
-		c.JSON(http.StatusInternalServerError, schema.ErrorResponse(http.StatusInternalServerError, "Internal Server Error", err.Error()))
+		c.JSON(http.StatusInternalServerError, mapper.ErrorResponse(http.StatusInternalServerError, "Internal Server Error", err.Error()))
 		return
 	}
-	c.JSON(http.StatusOK, schema.SuccessResponse(nil))
+	c.JSON(http.StatusOK, mapper.SuccessResponse(nil))
+}
+
+// Summary Update order status
+// @Description Update order status
+// @Tags order
+// @Accept json
+// @Produce json
+// @Param orderUpdateRequest body top-up-api_internal_schema.OrderUpdateRequest true "Order update request"
+// @Success 200 {object} top-up-api_internal_schema.Response
+// @Router /order/update-status [patch]
+func (h *OrderRouter) UpdateOrderStatus(c *gin.Context) {
+	orderUpdateRequest := schema.OrderUpdateRequest{}
+	if err := c.ShouldBindJSON(&orderUpdateRequest); err != nil {
+		h.logger.Error(errors.New("failed to bind order update request"), zap.Error(err))
+		c.JSON(http.StatusBadRequest, mapper.ErrorResponse(http.StatusBadRequest, "Bad Request", err.Error()))
+		return
+	}
+	err := h.service.UpdateOrderStatus(c, orderUpdateRequest)
+	if err != nil {
+		h.logger.Error(errors.New("failed to update order status"), zap.Error(err))
+		c.JSON(http.StatusInternalServerError, mapper.ErrorResponse(http.StatusInternalServerError, "Internal Server Error", err.Error()))
+		return
+	}
+	c.JSON(http.StatusOK, mapper.SuccessResponse(nil))
 }
