# internal/controller/http/puchaseHistory.go
@@ -4,7 +4,7 @@ import (
 	"fmt"
 	"net/http"
 	"strconv"
-	"top-up-api/internal/schema"
+	"top-up-api/internal/mapper"
 	"top-up-api/internal/service"
 	"top-up-api/pkg/auth"
 	"top-up-api/pkg/logger"
@@ -31,21 +31,23 @@ func NewPurchaseHistoryRouter(handler *gin.RouterGroup, s service.PurchaseHistor
 // @Accept json
 // @Produce json
 // @Param id path int true "User ID"
+// @Param page path int false "Page number"
+// @Param pageSize path int false "Page size"
 // @Security Bearer
-// @Success 200 {array} top-up-api_internal_model.PurchaseHistory
+// @Success 200 {object} top-up-api_internal_schema.PaginationResponse
 // @Router /purchase-history/{id} [get]
 func (h *PurchaseHistoryRouter) GetPurchaseHistory(c *gin.Context) {
 	token, err := h.auth.AuthenticateService(c)
 	if err != nil {
 		h.logger.Error(err)
-		c.JSON(http.StatusUnauthorized, schema.ErrorResponse(http.StatusUnauthorized, "Unauthorized", err.Error()))
+		c.JSON(http.StatusUnauthorized, mapper.ErrorResponse(http.StatusUnauthorized, "Unauthorized", err.Error()))
 		return
 	}
 
 	userAuth, err := h.auth.GetUserFromToken(token)
 	if err != nil {
 		h.logger.Error(err)
-		c.JSON(http.StatusUnauthorized, schema.ErrorResponse(http.StatusUnauthorized, "Unauthorized", err.Error()))
+		c.JSON(http.StatusUnauthorized, mapper.ErrorResponse(http.StatusUnauthorized, "Unauthorized", err.Error()))
 		return
 	}
 
@@ -53,20 +55,33 @@ func (h *PurchaseHistoryRouter) GetPurchaseHistory(c *gin.Context) {
 	idInt, err := strconv.ParseUint(id, 10, 64)
 	if err != nil {
 		h.logger.Error(err)
-		c.JSON(http.StatusBadRequest, schema.ErrorResponse(http.StatusBadRequest, "Invalid ID", ""))
+		c.JSON(http.StatusBadRequest, mapper.ErrorResponse(http.StatusBadRequest, "Invalid ID", ""))
 		return
 	}
 	if userAuth.ID != uint(idInt) {
 		h.logger.Error(fmt.Errorf("userAuth.ID: %v, idInt: %v", userAuth.ID, idInt))
-		c.JSON(http.StatusUnauthorized, schema.ErrorResponse(http.StatusUnauthorized, "Unauthorized", ""))
+		c.JSON(http.StatusUnauthorized, mapper.ErrorResponse(http.StatusUnauthorized, "Unauthorized", ""))
 		return
 	}
 
-	purchaseHistory, err := h.service.GetPurchaseHistoryByUserID(c, userAuth.ID)
-	if err != nil {
+	// Pagination parameters
+	page, err := strconv.Atoi(c.DefaultQuery("page", "1"))
+	if err != nil || page < 1 {
 		h.logger.Error(err)
-		c.JSON(http.StatusInternalServerError, schema.ErrorResponse(http.StatusInternalServerError, "Internal server error", err.Error()))
+		c.JSON(http.StatusBadRequest, mapper.ErrorResponse(http.StatusBadRequest, "Invalid page number", ""))
 		return
 	}
-	c.JSON(http.StatusOK, schema.SuccessResponse(purchaseHistory))
+	pageSize, err := strconv.Atoi(c.DefaultQuery("pageSize", "10"))
+	if err != nil || pageSize < 1 {
+		h.logger.Error(err)
+		c.JSON(http.StatusBadRequest, mapper.ErrorResponse(http.StatusBadRequest, "Invalid page size", ""))
+		return
+	}
+	paginatedResponse, err := h.service.GetPurchaseHistoriesByUserIDPaginated(c, userAuth.ID, page, pageSize)
+	if err != nil {
+		h.logger.Error(err)
+		c.JSON(http.StatusInternalServerError, mapper.ErrorResponse(http.StatusInternalServerError, "Internal Server Error", err.Error()))
+		return
+	}
+	c.JSON(http.StatusOK, paginatedResponse)
 }
